RESOLVED FIXED213905
ASSERT_NOT_REACHED() in EventRegionContext::popClip()
https://bugs.webkit.org/show_bug.cgi?id=213905
Summary ASSERT_NOT_REACHED() in EventRegionContext::popClip()
Simon Fraser (smfr)
Reported 2020-07-02 15:44:52 PDT
ASSERT_NOT_REACHED() in EventRegionContext::popClip()
Attachments
Patch (2.02 KB, patch)
2020-07-02 15:47 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2020-07-02 15:47:16 PDT
Daniel Bates
Comment 2 2020-07-02 15:48:21 PDT
Comment on attachment 403411 [details] Patch Patch looks good.
EWS
Comment 3 2020-07-06 12:48:32 PDT
Committed r263980: <https://trac.webkit.org/changeset/263980> All reviewed patches have been landed. Closing bug and clearing flags on attachment 403411 [details].
Radar WebKit Bug Importer
Comment 4 2020-07-06 12:49:15 PDT
Note You need to log in before you can comment on or make changes to this bug.