ASSERT_NOT_REACHED() in EventRegionContext::popClip() https://bugs.webkit.org/show_bug.cgi?id=213905

Reviewed by Daniel Bates.

Fix an assertion seen on bing.com, tesla.com etc where event region painting
would have mismatched push/pop because of an obvious code error.

I spent too long trying to make a testcase and gave up.

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::restoreClip):


Canonical link: https://commits.webkit.org/226800@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263980 268f45cc-cd09-0410-ab3c-d52691b4dbfc